# RAG-BootCamp

./: .gitignore  3-OtherVectorStores.ipynb  README.md  main.py  pyproject.toml  requirements.txt
0-DataIngestionParsing/: 1-dataIngestion.ipynb  2-dataParsingpdf.ipynb  3-dataParsigdoc.ipynb  4-csvEXcelParsing.ipynb  6-DatabaseParsing.ipynb
1-VectorEmbeddingandDatabases/: embedding.ipynb
2-VectorStores/: 1a-chromadb.ipynb  1b-chromadbLECL.ipynb  2-faiss.ipynb  2a-faiss.ipynb  chromadb.ipynb
2-VectorStores/chroma_db/: chroma.sqlite3
5-Hybrid Search Strategies/: 1-DenseSparseSearch.ipynb  3-mmr.ipynb
6-Query Enhancement/: 2-querydecomposition.ipynb
7-MultliModalRAGIntroduction/: multimodalrag.ipynb
Module 1 -Foundations of RAG, Vector Storage & Multimodal Ingestion (Sections 1–7)/0-DataIngestionParsing/: 1-dataIngestion.ipynb  2-dataParsingpdf.ipynb  3-dataParsigdoc.ipynb  5-jsonParsing.ipynb
Module 1 -Foundations of RAG, Vector Storage & Multimodal Ingestion (Sections 1–7)/1-VectorEmbeddingandDatabases/: openAIembeddings.ipynb
Module 1 -Foundations of RAG, Vector Storage & Multimodal Ingestion (Sections 1–7)/2-VectorStores/: 1a-chromadb.ipynb  1b-chromadbLECL.ipynb
Module 1 -Foundations of RAG, Vector Storage & Multimodal Ingestion (Sections 1–7)/3-VectorDatabases/: Datastaxdb.ipynb  PineconeVectorDB.ipynb
Module 1 -Foundations of RAG, Vector Storage & Multimodal Ingestion (Sections 1–7)/4-Advanced Chunking & Processing/: SemanticChunking.ipynb
Module 1 -Foundations of RAG, Vector Storage & Multimodal Ingestion (Sections 1–7)/5-Hybrid Search Strategies/: 2-Reranking.ipynb
Module 1 -Foundations of RAG, Vector Storage & Multimodal Ingestion (Sections 1–7)/6-Query Enhancement/: 1-QueryExpansion.ipynb  3-HyDE.ipynb
(+8 files in other folders)
