[project]
name = "rag-project-kn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.8",
    "docx2txt>=0.9",
    "faiss-cpu>=1.13.2",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "jq>=1.11.0",
    "langchain>=1.2.15",
    "langchain-chroma>=0.1.2",
    "langchain-community>=0.4.1",
    "langchain-experimental>=0.4.1",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.2",
    "langchain-openai>=1.1.15",
    "langchain-text-splitters>=1.1.2",
    "langchain-unstructured>=1.0.1",
    "langgraph>=1.1.9",
    "matplotlib>=3.11.0",
    "msoffcrypto-tool>=6.0.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "pdfminer>=20191125",
    "pymupdf>=1.27.2.3",
    "pypdf>=6.10.2",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.4.1",
    "tiktoken>=0.12.0",
    "unstructured>=0.22.32",
    "unstructured-client>=0.45.0",
    "wikipedia>=1.4.0",
]
